k8s/deployment_backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibonacci-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fibonacci-server
  template:
    metadata:
      labels:
        app: fibonacci-server
    spec:
      containers:
        - name: fibonacci-server
          image: brunoauditore/fibonacci-server
          ports:
            - containerPort: 80
          volumeMounts:
          - name: fibonacci-volume
            mountPath: /usr/share/

  volumes:
    - name: fibonacci-volume
      emptyDir: {}
