k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: nginx-tes-domain.com
      http:
        paths:
          - path: /fibonacci
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
